--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id = 'container'>
     <div id="profile">
-      <img src="" alt="my persona">
+      <img src="./assets/avatar.png" alt="Photo Joyce">
     </div>
 
 
