--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </li>
 
       <li>
-        <a href="#">Email</a>
+        <a href="mailto:joycesantos8900@gmail.com">Email</a>
       </li>
 
     </ul>
