--- a/index.html
+++ b/index.html
@@ -44,10 +44,23 @@
 
     </ul>
     <div id="social-links">
-      <ion-icon name="logo-linkedin"></ion-icon>
-      <ion-icon name="logo-instagram"></ion-icon>
-      <ion-icon name="logo-github"></ion-icon>
-      <ion-icon name="mail-outline"></ion-icon>
+      <a href="https://www.linkedin.com"
+      target="_blank">
+        <ion-icon name="logo-linkedin"></ion-icon>
+      </a>
+      <a href="https://www.instagram.com"
+      target="_blank">
+        <ion-icon name="logo-instagram"></ion-icon>
+      </a>
+      <a href="https://www.github.com"
+      target="_blank">
+        <ion-icon name="logo-github"></ion-icon>
+      </a>
+      <a href="https://www.gmail.com"
+      target="_blank">
+        <ion-icon name="mail-outline"></ion-icon>
+      </a>
+      
        
     </div>
 
