--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="light">
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,6 +63,10 @@
       
        
     </div>
+    <footer>
+      Feito com <3 pela <a href="https://www.rocketseat.com.br/"
+      target="_blank"> Rocketseat</a>
+    </footer>
 
   </div>
 
