--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </p>
     </div>
 
-    <div id="switch">
+    <div id="switch" onclick="toggleMode()">
       <button>
         
       </button>
@@ -83,5 +83,6 @@
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
